Added Docker compose and google Jib dependency

--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.wjbos</groupId>
 	<artifactId>loans</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>loans2</name>
 	<description>loans2</description>
 	<url/>
@@ -83,6 +84,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<image>
+						<name>
+							wjbos/${project.artifactId}:v1
+						</name>
+					</image>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
