--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.wjbos</groupId>
     <artifactId>cards</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>cards</name>
     <description>cards</description>
     <url/>
@@ -89,6 +90,16 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.3.2</version>
+                <configuration>
+                    <to>
+                        <image>wjbos/cards:v1</image>
+                    </to>
                 </configuration>
             </plugin>
         </plugins>
