--- a/account/pom.xml
+++ b/account/pom.xml
@@ -92,6 +92,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+					<to>
+						<image>wjbos/accounts:v1</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
