--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -14,3 +14,14 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+build:
+  version: "1.0"
+
+loans:
+  message: "Welcome to the loans Microservice"
+  contactDetails:
+    name: "WJ Boshoff"
+    email: "wjbosdev@gmail.com"
+  onCallSupport:
+    - (066) 7584578
