--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -17,6 +17,21 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+    profiles:
+      active:
+        - "qa"
 
 build:
-  version: "1.0"
+  version: "3.0"
+
+accounts:
+  message: "Welcome to Bank accounts related local APIs "
+  contactDetails:
+    name: "John Doe - Developer"
+    email: "john@fakemail.com"
+  onCallSupport:
+    - (555) 555-1234
