--- a/configserver/src/main/resources/config/accounts-qa.yml
+++ b/configserver/src/main/resources/config/accounts-qa.yml
@@ -6,5 +6,4 @@ accounts:
   contactDetails:
     name: "Not WJ Boshoff again - Product tester"
     email: "testuser2@fakemail.com"
-  onCallSupport:
-    - (453) 392-4829
+  onCallSupport: "(453) 392-4829"
