--- a/configserver/src/main/resources/config/accounts.yml
+++ b/configserver/src/main/resources/config/accounts.yml
@@ -6,5 +6,4 @@ accounts:
   contactDetails:
     name: "John Doe - Developer"
     email: "john@fakemail.com"
-  onCallSupport:
-    - (555) 555-1234
+  onCallSupport: "(555) 555-1234"
