--- a/cards/src/main/resources/application.yaml
+++ b/cards/src/main/resources/application.yaml
@@ -3,8 +3,7 @@ server:
 
 spring:
   application:
-    name: cards
-
+    name: "cards"
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -19,20 +18,4 @@ spring:
       ddl-auto: update
     show-sql: true
   config:
-    import:
-      - "application_qa.yml"
-      - "application_prod.yml"
-    profiles:
-      active:
-        - "prod"
-
-build:
-  version: "1.0"
-
-cards:
-  message: "Welcome to the loans Microservice"
-  contactDetails:
-    name: "WJ Boshoff"
-    email: "wjbosdev@gmail.com"
-  onCallSupport:
-    - (066) 7584578
+    import: "optional:configserver:http://localhost:8071/"
