--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: accounts
+    name: "accounts"
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -18,20 +18,4 @@ spring:
       ddl-auto: update
     show-sql: true
   config:
-    import:
-      - "application_qa.yml"
-      - "application_prod.yml"
-    profiles:
-      active:
-        - "qa"
-
-build:
-  version: "3.0"
-
-accounts:
-  message: "Welcome to Bank accounts related local APIs "
-  contactDetails:
-    name: "John Doe - Developer"
-    email: "john@fakemail.com"
-  onCallSupport:
-    - (555) 555-1234
+    import: "optional:configserver:http://localhost:8071/"
