--- a/configserver/src/main/resources/config/loans.yml
+++ b/configserver/src/main/resources/config/loans.yml
@@ -1,6 +1,24 @@
 build:
   version: "1.0"
 
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: ''
+  h2:
+    console:
+      enabled: true
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+server:
+  port: 8090
+
 loans:
   message: "Welcome to the loans Microservice"
   contactDetails:
