--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: "accounts"
   config:
-    import: "optional:configserver:http://localhost:8071/"
+    import: "optional:configserver:http://configserver-ms:8071/"
