--- a/configserver/src/main/resources/config/accounts.yml
+++ b/configserver/src/main/resources/config/accounts.yml
@@ -3,11 +3,15 @@ build:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/accountsdb
+    url: jdbc:mysql://accountsdb:3306/accountsdb
     username: root
     password: root
+    driver:
+      classname: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     sql:
       init:
