--- a/configserver/src/main/resources/config/cards.yaml
+++ b/configserver/src/main/resources/config/cards.yaml
@@ -3,15 +3,20 @@ build:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cardsdb
-    username: root
-    password: root
-  jpa:
-    hibernate:
-    show-sql: true
-    sql:
-      init:
-        mode: always
+    datasource:
+      url: jdbc:mysql://cardsdb:3306/cardsdb
+      username: root
+      password: root
+      driver:
+        classname: com.mysql.cj.jdbc.Driver
+    jpa:
+      hibernate:
+        ddl-auto: update
+        dialect: org.hibernate.dialect.MySQL8Dialect
+      show-sql: true
+      sql:
+        init:
+          mode: always
 
 server:
   port: 9000
