--- a/configserver/src/main/resources/config/loans.yml
+++ b/configserver/src/main/resources/config/loans.yml
@@ -3,11 +3,15 @@ build:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/loansdb
+    url: jdbc:mysql://loansdb:3306/loansdb
     username: root
     password: root
+    driver:
+      classname: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     sql:
       init:
