--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,78 @@
 services:
+  accountsdb:
+    image: mysql
+    container_name: accountsdb
+    ports:
+      - 3306:3306
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 5
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: accountsdb
+    volumes:
+      - accountsdb_data:/var/lib/mysql
+    networks:
+      - banking-system
+
+  loansdb:
+    image: mysql
+    container_name: loansdb
+    ports:
+      - 3307:3307
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 5
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: loansdb
+    volumes:
+      - loansdb_data:/var/lib/mysql
+    networks:
+      - banking-system
+
+  cardsdb:
+    image: mysql
+    container_name: cardsdb
+    ports:
+      - 3308:3308
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 10s
+      retries: 5
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: cardsdb
+    volumes:
+      - cardsdb_data:/var/lib/mysql
+    networks:
+      - banking-system
+
+  configserver:
+    image: "wjbos/configserver:v1"
+    container_name: configserver-ms
+    ports:
+      - "8071:8071"
+    networks:
+      - banking-system
+
   accounts:
     image: "wjbos/accounts:v1"
     container_name: accounts-ms
     ports:
       - "8080:8080"
+    environment:
+      SPRING_APPLICATION_NAME: "accounts"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
+      DB_HOST: accountsdb
     deploy:
       resources:
         limits:
           memory: 700m
+    depends_on:
+      - configserver
     networks:
       - banking-system
 
@@ -16,10 +81,15 @@ services:
     container_name: loans-ms
     ports:
       - "8090:8090"
+    environment:
+      SPRING_APPLICATION_NAME: "loans"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3307/loansdb"
     deploy:
       resources:
         limits:
           memory: 700m
+    depends_on:
+      - configserver
     networks:
       - banking-system
 
@@ -28,13 +98,23 @@ services:
     container_name: cards-ms
     ports:
       - "9000:9000"
+    environment:
+      SPRING_APPLICATION_NAME: "cards"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3308/cardsdb"
     deploy:
       resources:
         limits:
           memory: 700m
+    depends_on:
+      - configserver
     networks:
       - banking-system
 
 networks:
   banking-system:
     driver: "bridge"
+
+volumes:
+  accountsdb_data:
+  loansdb_data:
+  cardsdb_data:
