--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     name: "loans"
 
   config:
-    import: "optional:configserver:http://localhost:8071/"
+    import: "optional:configserver:http://configserver-ms:8071/"
